--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "login-backend",
+  "name": "ai-for-fun-backend",
   "version": "1.0.0",
-  "description": "login page backend",
-  "main": "index.js",
+  "description": "Backend for AI For Fun ultrasound analysis app",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Pratyush",
-  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0"
-  }
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "ai",
+    "ultrasound",
+    "medical",
+    "classification",
+    "segmentation"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
